# Metis

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  ORCHESTRATION_IMPLEMENTATION_PLAN.md  QUICKSTART.md  README.md  ROADMAP.md  SETUP.md  SYSTEM_DEPENDENCIES.md  check.py  check_db.py  check_eia.py  check_schema.py  clean_synthetic_data.py  diagnose_data.py  fix_ingest_imports.py  ingest_wrapper.py  list_movebank_studies.py  run_ingestion.ps1  run_ingestion_startup.ps1  simd_debugging_substack_draft.md  test_coordinator_verify.py  test_fred.py  test_movebank_auth.py
.github/: CICD_TODO.md
.github/workflows/: data-ingest.yml  data-quality.yml  tests.yml  tier-0-ci.yml  tier-1-validation.yml  tier-2-scaling-chaos.yml
data/: airline_fuel.ods
data/census/: permits_cust_old.xlsx  permitsbyusreg_cust.xls
data/rag_context/: 3d116718-bda8-4d8f-b884-a080b1333b7f.json  7342eb65-e05a-4598-be32-bc44fbb90b69.json  9ff36f11-482a-4d89-b36a-9f954325fe74.json  b1ff891f-bb40-4a89-900a-63de5b7a58e0.json
docs/: HARDWARE_OPTIMIZATION_ROADMAP.md  PROJECT_STATUS.md  _config.yml  index.md  setup.md
docs/_layouts/: default.html  post.html
docs/_posts/: 2026-02-10-dual-lstm-fusion-breakthrough.md  2026-02-10-hardware-optimization-phase-1.md
docs/blog/: 2026-02-17-llm-rag-integration-gaps-phase-1.md  2026-02-18-observability-ci-cd-separation-concerns.md  index.md
execution/: Cargo.toml
execution/ais_vessel_tracking/: Cargo.toml
execution/ais_vessel_tracking/examples/: track_vessels.rs
execution/ais_vessel_tracking/src/: lib.rs
execution/engine/: Cargo.toml
execution/engine/benches/: bridge_latency.rs  lob_performance.rs  lockfree_fusion.rs  realistic_simd.rs  simd_vectorization.rs
execution/engine/examples/: check_simd_execution.rs  core_test.rs
execution/engine/src/: execution_algos.rs  fusion.rs  latency.rs  lib.rs  reasoning.rs  signal_interface.rs
execution/engine/src/orderbook/: csv_parser.rs  mod.rs
execution/execution_algos/: Cargo.toml
execution/execution_algos/src/: lib.rs
execution/fix_client/: Cargo.toml
execution/fix_client/src/: lib.rs
execution/metis-core/: Cargo.toml
execution/metis-core/benches/: lockfree_fusion.rs  realistic_simd.rs  simd_vectorization.rs
execution/metis-core/examples/: check_simd_execution.rs  core_test.rs
execution/metis-core/profiling/: audit_windows_dependencies.ps1  measure_bridge_latency.py  windows-baseline-simple.ps1
execution/metis-core/profiling/simd_trials_wsl_2026-06-02_234118/: trial_2_raw.txt
execution/metis-core/src/: execution.rs  lib.rs  numa.rs  simd.rs  types.rs
execution/orderbook/: Cargo.toml
execution/orderbook/src/: csv_parser.rs  lib.rs
execution/profiling/: Note.md  SIMD_COMPARISON_README.md  audit_wsl_dependencies.sh  check_simd_execution.ps1  compare_simd_results.py  run_simd_comparison.ps1  simd_comparison_results.json  test.ps1  test_orchestrator.ps1  wsl-baseline-simple.sh  wsl-simd-comparison.sh
execution/profiling/simd_trials_windows_2026-06-02_232431/: trial_1_raw.txt  trial_2_raw.txt  trial_3_raw.txt
execution/profiling/simd_trials_wsl_2026-06-02_234118/: trial_1_raw.txt  trial_3_raw.txt
execution/signal_interface/: Cargo.toml
execution/signal_interface/examples/: server.rs
execution/signal_interface/src/: lib.rs
infrastructure/: docker-compose.yml  init_db.sql
metis/: index.html  package-lock.json  package.json  test_output.txt
metis-core/: Cargo.toml  simd_results.txt
metis-core/.cargo/: config.toml
metis-core/benches/: bridge_latency.rs  lockfree_fusion.rs  realistic_simd.rs  simd_vectorization.rs
metis-core/profiling/: baseline_bridge.txt  baseline_lockfree.txt  baseline_measurements.md  baseline_simd.txt
metis-core/src/: bridge.rs  execution.rs  fusion.rs  lib.rs  numa.rs  reasoning.rs  simd.rs  types.rs
metis/src/: App.css  App.tsx  styles.css
metis/src-tauri/: Cargo.toml  tauri.conf.json
metis/src-tauri/src/: lib.rs  main.rs  metrics_bridge.rs  pipeline_bridge.rs  rag_engine.rs  test_bridge.rs
metis/src-tauri/src/orchestrator/: diagnostics.rs  error.rs  job_queue.rs  main.rs  metrics.rs  mod.rs  orchestrator.rs  python_runner.rs  server.rs  types.rs
metis/src-tauri/tests/: orchestrator_integration.rs  tauri_commands_tests.rs
models/: lstm_metadata.json  lstm_ng_predictor.keras
profiling/: CROSS_PLATFORM_RESULTS.md  README_PROFILING_ROADMAP.md  features_profile.txt
rag/: Cargo.toml  __init__.py  check_db.py  retrieval_pipeline.py
rag/examples/: test_with_real_signal.rs
rag/indexing/: __init__.py  document_ingester.py
rag/ingestion/: __init__.py  database_context.py
rag/integrations/: phase1_example.py
rag/src/: deterministic_reasoning.rs  document_indexer.rs  document_scope.rs  document_store.rs  embedding.rs  explanation_cache.rs  explanation_parser.rs  lib.rs  llm.rs  main.rs  pipeline.rs  python_bridge.rs  python_bridge_simple.rs  python_env.rs  reasoning_chain.rs  session_manager.rs  template.rs  think_strip.rs  token_counter.rs  types.rs
rag/tests/: integration_tests.rs  test_phase1_database_context.py  test_python_integration.py
rag/vectorstore/: lancedb_store.py
research/: __init__.py  backfill_multi_asset_data.py  config.py  list_r2_contents.py  metrics.py  metrics_service.py  orchestrate_daily_pipeline.py  requirements-dev.txt  requirements.txt  signal_client.py  test_bridge.py  test_chaos_ingester_failures.py  test_chaos_rag_unavailable.py  test_coordinator.py  test_coordinator_bridge.py  test_ingesters_mock.py  test_ingestion.py  test_metrics_integration.py  test_metrics_standalone.py  test_rag_scaling.py
research/analysis/: correlation_analysis.py  event_study.py
research/backtest/: engine.py  metrics.py  run_backtest.py  signals.py  simple_backtest.py
research/common/: __init__.py  cache_utils.py  runtime_config.py
research/data_ingest/: README.md  __init__.py  backfill_cme_direct.py  backfill_fred_eia.py  backfill_historical_data.py  backfill_lmp_prod.py  fail_modes.py  generate_sample_data.py  incremental_utils.py  (+42 more)
rust/order_book/: Cargo.toml  README.md
rust/order_book/src/: lib.rs
(+121 files in other folders)
