[workspace]
resolver = "2"
members = [
    "orderbook",
    "execution_algos",
    "fix_client",
    "signal_interface",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Metis Team"]
license = "MIT"
repository = "https://github.com/yourusername/metis"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rmp-serde = "1.1"  # MessagePack

# Networking
tokio-tungstenite = "0.21"  # WebSocket
reqwest = { version = "0.11", features = ["json"] }

# Performance
crossbeam = "0.8"  # Lock-free channels
parking_lot = "0.12"  # Faster mutexes
rayon = "1.8"  # Data parallelism

# Time handling
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Testing
criterion = "0.5"  # Benchmarking
proptest = "1.4"  # Property-based testing

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
inherits = "release"
