[workspace]
resolver = "2"
members = [
    "metis-core",
    "orderbook",
    "execution_algos",
    "fix_client",
    "signal_interface",
    "ais_vessel_tracking",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Metis Team"]
license = "MIT"
repository = "https://github.com/yourusername/metis"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rmp-serde = "1.1"

# Networking
tokio-tungstenite = "0.21"
reqwest = { version = "0.11", features = ["json"] }

# Performance
crossbeam = "0.8"
parking_lot = "0.12"
rayon = "1.8"
flume = "0.11"

# Math / SIMD
ndarray = "0.15"

# Python bridge
pyo3 = { version = "0.23", features = ["extension-module"] }
core_affinity = "0.8.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Testing / benchmarking
criterion = "0.5"
proptest = "1.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

# Keep debug symbols for the PyO3 extension so Python tracebacks are readable
[profile.release.package.metis-core]
strip = false
debug = 1

[profile.bench]
inherits = "release"
