[package]
name = "metis-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core trading
crossbeam = "0.8"
parking_lot = "0.12"
flume = "0.11"

# PyO3 for Python integration
pyo3 = { version = "0.23", features = ["extension-module"] }

# Benchmarking
criterion = "0.5"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Math/SIMD
ndarray = "0.15"

# Windows NUMA/threading (Windows only)
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "processthreadsapi", "winnt", "sysinfoapi", "handleapi"] }

[lib]
name = "metis_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "simd_vectorization"
harness = false

[[bench]]
name = "lockfree_fusion"
harness = false

[[bench]]
name = "bridge_latency"
harness = false

[[bench]]
name = "realistic_simd"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
