[package]
name = "rag"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
llama-cpp-2 = "=0.1.132"
pyo3 = { version = "0.22" }
numpy = "0.22"
ndarray = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.10"
uuid = { version = "1.0", features = ["v4", "serde"] }