[package]
name = "rag"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
pyo3 = { version = "0.22.6", features = ["auto-initialize"] }
numpy = "0.22"
ndarray = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
lancedb = "0.31.0"
futures = "0.3.32"

# Path dependency into the (separate) execution/ workspace, for
# engine::reasoning's deterministic "Gambling Meteorologist" math. One-way
# only — engine has zero rag/pyo3/lancedb dependencies, so this doesn't pull
# any of RAG's heavy dependency graph into the trading engine's binary.
engine = { path = "../execution/engine" }

# Native local embedding (ONNX via ort), replacing the PyO3-bridge path in
# embedding.rs. all-MiniLM-L6-v2 ships a pre-exported ONNX build and is a
# default supported model here, unlike full LLM generation which still
# needs llm.rs's Python delegation. First run downloads to .fastembed_cache/
# (needs network once); offline after that.
fastembed = "5"
