[package]
name = "execution_algos"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

orderbook = { path = "../orderbook" }

[dev-dependencies]
tokio-test = "0.4"
