[package]
name = "orderbook"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
crossbeam = { workspace = true }
parking_lot = { workspace = true }

# Additional dependencies for order book
rustc-hash = "1.1"  # Faster HashMap
smallvec = "1.13"  # Stack-allocated vectors
ordered-float = "4.2"  # Orderable floats
csv = "1.3"
clap = { version = "4.4", features = ["derive"] }
tracing-subscriber = "0.3"

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
tokio-test = "0.4"

[[bench]]
name = "lob_performance"
harness = false
