[package]
name = "signal_interface"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

orderbook = { path = "../orderbook" }
execution_algos = { path = "../execution_algos" }

[dev-dependencies]
tokio-test = "0.4"
