[package]
name = "order_book"
version = "0.1.0"
edition = "2021"

[lib]
name = "order_book"
path = "src/lib.rs"

[[bin]]
name = "demo"
path = "src/bin/demo.rs"

[[bin]]
name = "csv_demo"
path = "src/bin/csv_demo.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
csv = "1"
chrono = { version = "0.4", features = ["serde"] }
